[package]
name = "tower"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[lib]
name = "rust_tower"
path = "src/lib/lib.rs"

[dependencies]
color-eyre = "0.6.3"
rand = "0.9.1"
ratatui = "0.29.0"
crossterm = "0.27.0"
notify-rust = "4.10.0"
uuid = { version = "1.16.0", features = ["v4"] }
